# test

./: Pipfile  README.md  pyproject.toml
.github/workflows/: gh-pages.yml  python-app.yml
docs/: api.rst  conf.py  index.rst
mypackage/: __init__.py  a.py
mypackage/foo/: __init__.py  p.py
